---
source: crates/koruma-derive/src/expand/snapshot_tests.rs
expression: pretty_print(expanded)
---
/// Enum of all possible validators for this field.
#[derive(Clone, Debug)]
#[allow(dead_code)]
pub enum UserProfileUsernameKorumaValidator {
    StringLengthValidation(StringLengthValidation),
}
#[derive(Clone, Debug)]
pub struct UserProfileUsernameKorumaValidationError {
    string_length_validation: Option<StringLengthValidation>,
}
impl UserProfileUsernameKorumaValidationError {
    pub fn string_length_validation(&self) -> Option<&StringLengthValidation> {
        self.string_length_validation.as_ref()
    }
    /// Returns all failed field-level validators.
    pub fn all(&self) -> Vec<UserProfileUsernameKorumaValidator> {
        let mut result = Vec::new();
        if let Some(v) = &self.string_length_validation {
            result
                .push(
                    UserProfileUsernameKorumaValidator::StringLengthValidation(v.clone()),
                );
        }
        result
    }
    pub fn is_empty(&self) -> bool {
        self.string_length_validation.is_none()
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
/// Enum of all possible validators for this field.
#[derive(Clone, Debug)]
#[allow(dead_code)]
pub enum UserProfileBioKorumaValidator {
    StringLengthValidation(StringLengthValidation),
}
#[derive(Clone, Debug)]
pub struct UserProfileBioKorumaValidationError {
    string_length_validation: Option<StringLengthValidation>,
}
impl UserProfileBioKorumaValidationError {
    pub fn string_length_validation(&self) -> Option<&StringLengthValidation> {
        self.string_length_validation.as_ref()
    }
    /// Returns all failed field-level validators.
    pub fn all(&self) -> Vec<UserProfileBioKorumaValidator> {
        let mut result = Vec::new();
        if let Some(v) = &self.string_length_validation {
            result
                .push(UserProfileBioKorumaValidator::StringLengthValidation(v.clone()));
        }
        result
    }
    pub fn is_empty(&self) -> bool {
        self.string_length_validation.is_none()
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
/// Auto-generated validation error struct for [`#struct_name`].
///
/// Each field contains a nested error struct with `Option<Validator>` for each
/// validator. Access errors via chained calls like `error.field().validator()`.
#[derive(Clone, Debug)]
pub struct UserProfileKorumaValidationError {
    username: UserProfileUsernameKorumaValidationError,
    bio: UserProfileBioKorumaValidationError,
}
impl UserProfileKorumaValidationError {
    pub fn username(&self) -> &UserProfileUsernameKorumaValidationError {
        &self.username
    }
    pub fn bio(&self) -> &UserProfileBioKorumaValidationError {
        &self.bio
    }
}
impl koruma::ValidationError for UserProfileKorumaValidationError {
    fn is_empty(&self) -> bool {
        self.username.is_empty() && self.bio.is_empty()
    }
}
impl UserProfile {
    /// Validates all fields and returns an error struct containing
    /// all validation failures.
    ///
    /// Returns `Ok(())` if all validations pass, or `Err(error)` where
    /// `error` contains the validation failures for each field.
    pub fn validate(&self) -> Result<(), UserProfileKorumaValidationError> {
        let mut error = UserProfileKorumaValidationError {
            username: UserProfileUsernameKorumaValidationError {
                string_length_validation: None,
            },
            bio: UserProfileBioKorumaValidationError {
                string_length_validation: None,
            },
        };
        let mut has_error = false;
        let __field_value = &self.username;
        let validator = StringLengthValidation::builder()
            .min(1)
            .max(50)
            .with_value(__field_value.clone())
            .build();
        if !validator.validate(__field_value) {
            error.username.string_length_validation = Some(validator);
            has_error = true;
        }
        if let Some(ref __field_value) = self.bio {
            let validator = StringLengthValidation::builder()
                .min(1)
                .max(200)
                .with_value(__field_value.clone())
                .build();
            if !validator.validate(__field_value) {
                error.bio.string_length_validation = Some(validator);
                has_error = true;
            }
        }
        if has_error { Err(error) } else { Ok(()) }
    }
}
impl koruma::ValidateExt for UserProfile {
    type Error = UserProfileKorumaValidationError;
    fn validate(&self) -> Result<(), UserProfileKorumaValidationError> {
        UserProfile::validate(self)
    }
}
